--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.redisson/redisson -->
 		<dependency>
-		    <groupId>org.redisson</groupId>
-		    <artifactId>redisson</artifactId>
+	    	<groupId>org.redisson</groupId>
+		    <artifactId>redisson-spring-boot-starter</artifactId>
 		    <version>3.9.1</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
@@ -45,7 +45,7 @@
 		    <artifactId>jedis</artifactId>
 		    <version>3.0.1</version>
 		</dependency>
-		
+
 	</dependencies>
 
 	<build>
