--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,1 @@
-spring:
-  redis:
-#    host: 114.55.230.94
-    host: 10.50.0.136
-    port: 5000
-    password: wS6eG5xUoiLw5z5k
-    pool:
-      max-active: 100
-      min-idle: 0
-    timeout: 10000
+redisCluster: false
